--- a/docs/210209/dabercro_hbb_210209.tex
+++ b/docs/210209/dabercro_hbb_210209.tex
@@ -8,7 +8,7 @@
   Christoph Paus
 }
 
-\title{\bf \sffamily Title Here}
+\title{\bf \sffamily Unblinded VHbb Run 2 Combination Results}
 \date{\today}
 
 \usecolortheme{dove}
@@ -115,10 +115,63 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Introduction}
+  \frametitle{Inclusive}
+
+  \twofigs{}
+          {210208_incl_unblinded_aliya_4ef7b680/scan_nominal_r.pdf}
+          {}
+          {210208_incl_unblinded_aliya_4ef7b680/summary_stxs.pdf}
+
 \end{frame}
 
-\begin{comment}
+\begin{frame}
+  \frametitle{STXS}
+
+  \threefigs{}
+            {210208_STXSfine_400split_unblinded_aliya_4ef7b680/summary_stxs.pdf}
+            {Low $p_T$}
+            {210208_STXSfine_400split_unblinded_aliya_4ef7b680/scan_nominal_r_zhlow.pdf}
+            {Med with jets}
+            {210208_STXSfine_400split_unblinded_aliya_4ef7b680/scan_nominal_r_zhmedwithj.pdf}
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{ZH, WH}
+
+  \threefigs{}
+            {210208_vh_unblinded_aliya_4ef7b680/summary_stxs.pdf}
+            {ZH Scan}
+            {210208_vh_unblinded_aliya_4ef7b680/scan_nominal_r_zh.pdf}
+            {WH Scan}
+            {210208_vh_unblinded_aliya_4ef7b680/scan_nominal_r_wh.pdf}
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{Lepton Splitting}
+
+  \fourfigs{}
+           {210208_leptons_unblinded_aliya_4ef7b680/summary_stxs.pdf}
+           {0-lepton Scan}
+           {210208_leptons_unblinded_aliya_4ef7b680/scan_nominal_r_0lep.pdf}
+           {1-lepton Scan}
+           {210208_leptons_unblinded_aliya_4ef7b680/scan_nominal_r_1lep.pdf}
+           {2-lepton Scan}
+           {210208_leptons_unblinded_aliya_4ef7b680/scan_nominal_r_2lep.pdf}
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{Lepton and Year Splitting}
+
+  \twofigs{}
+          {210208_leptons_year_unblinded_aliya_4ef7b680/summary_stxs.pdf}
+          {2-leptons 2017}
+          {210208_leptons_year_unblinded_aliya_4ef7b680/scan_nominal_r_2lep_2017.pdf}
+
+\end{frame}
+
 \beginbackup
 
 \begin{frame}
@@ -129,6 +182,5 @@
 \input{backup_slides.tex}
 
 \backupend
-\end{comment}
 
 \end{document}
